--- a/sytle.css
+++ b/sytle.css
@@ -4,6 +4,7 @@
 /* VARIABLES DECLARATION HERE */
 :root {
     --form-input-gap: 16px;
+    --form-title-size: 1.3rem;
 }
 
 /* END OF VARIABLES DECLARATION */
@@ -16,15 +17,15 @@
 body {
     /* Prevent scrolling, means displayed content only the 100% screen */
     /* overflow: hidden; */
-
+    font-family: "Montaga", sans-serif;
 }
 
 @font-face {
-    font-family: "helvetica";
+    font-family: "Helvetica";
     src: 
         url(assets/fonts/freesans-webfont.woff2) format("woff2"),
         url(assets/fonts/freesans-webfont.woff) format("woff");
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 }
 
@@ -42,6 +43,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    position: relative;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
     flex: 2.4;
 }
 
@@ -49,7 +54,7 @@ body {
     background-color: rgba(0, 0, 0, 0.4);
     margin-top: 70dvh;
     padding: 16px 52px;
-    width: inherit;
+    width: min(inherit, 100%);
     display: flex;
     justify-self: center;
     align-items: center;
@@ -66,6 +71,15 @@ body {
     margin-top: 12px;
 }
 
+/* .image-container .source-wrapper {
+    position: absolute;
+    bottom: 0;
+}
+
+.image-container .source-wrapper * {
+    color: whitesmoke;
+} */
+
 /* Form container styling */
 .form-container {
     font-family: "Montaga", serif;
@@ -76,36 +90,40 @@ body {
 }
 
 .form-container p:first-child {
-    font-size: 1.7rem;
+    /* font-size: 1.7rem; */
+    font-size: clamp(var(--form-title-size), 2.5dvw, 2rem);
     margin-bottom: 24px;
 }
 
 .form-container .end-heading {
     margin-bottom: 60px;
-    font-size: 1.3rem;
+    /* font-size: 1.3rem; */
+    font-size: clamp(var(--form-title-size), 1.8dvw, 1.7rem);
 }
 
 .form-container .end-heading+h3 {
+    font-size: var(--form-title-size);
     margin-bottom: 8px;
+
 }
 
 .form-wrapper {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: var(--form-input-gap);
+    /* gap: var(--form-input-gap); */
 }
 
 .form-wrapper .form-row {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* gap: var(--form-input-gap); */
 }
 
 .form-wrapper .input-wrapper {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     flex: 1 1 0;
+    margin-bottom: var(--form-input-gap);
 }
 
 .form-wrapper .input-wrapper label {
@@ -113,25 +131,29 @@ body {
 }
 
 .form-wrapper .input-wrapper input {
-    box-sizing: border-box;
     border: 1px solid #e5e7eb;
+    box-sizing: border-box;
     border-radius: 4px;
     min-width: 300px;
-    width: 95%;
-    /* width: max(300px, 25dvw); */
-    /* height: ; */
+    width: 80%;
     padding: 4px 8px;
 }
 
 .button-wrapper button {
-    margin-top: var(--form-input-gap);
+    font: 1.3rem Arial, Helvetica, sans-serif;
+    background-color: #344664;
+    color: #e5e7eb;
+    border: none;
+    border-radius: 8px;
     padding: 8px 24px;
+    margin-top: var(--form-input-gap);
+}
+
+.button-wrapper button:hover {
+    background-color: #9eaab8;
+    color: #262630;
 }
 
 .form-container .login-hyperlink {
     margin-top: 24px;
-}
-
-.form-container > * {
-    border: 2px solid red;
 }
